...
        
        return textStorage
    }()
    
    var customTextView: IPTextView?
    
    var addNewTextViewButton: UIButton = {
        let button = UIButton(frame: CGRect(x: 0, y: 0, width: 100, height: 100))
        button.setImage(UIImage(systemName: "plus"), for: .normal)
        button.addTarget(nil, action: #selector(addNewTextView), for: .touchUpInside)
        button.accessibilityIdentifier = "addNewTextViewButton"
        button.translatesAutoresizingMaskIntoConstraints = false
        
        return button
    }()
    
    let doneButton: UIButton = {
        let button = UIButton()
        button.setTitle("Done", for: .normal)
        button.isHidden = true
        button.addTarget(nil, action: #selector(doneButtonTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "doneButton"

        button.translatesAutoresizingMaskIntoConstraints = false
        
        return button
    }()
    
    let cancelButton: UIButton = {
        let button = UIButton()
        button.setTitle("Cancel", for: .normal)
        button.isHidden = true
        button.addTarget(nil, action: #selector(cancelButtonTapped), for: .touchUpInside)
        
        button.translatesAutoresizingMaskIntoConstraints = false
        
        return button
...
        view.addSubview(blurView)
        
        return view
    }()
    
    //MARK: - Text Editing Buttons.
    let alignmentChangeButton: UIButton = {
        let image = UIImage(named: "textLeft")

        let button = UIButton()
        button.setImage(image, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(nil, action: #selector(alignmentChangeBarButtonTapped), for: .touchUpInside)
...
        let image = UIImage(named: "default")
        
        let button = UIButton()
        button.setImage(image, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(nil, action: #selector(fillChangeBarButtonTapped), for: .touchUpInside)
        button.accessibilityIdentifier = "fillStateChangeButton"
        
        return button
    }()
    
    let fontSizeSlider: IPSliderView = {
        
        let dimension = widthToDimensions(35)
        
        let slider = IPSliderView(frame: CGRect(x: 0, y: 0,
                                                width: dimension.width,
                                                height: dimension.height))
...
    }
    
    func setupToolbar() {
        
        collectionController.collectionView!.translatesAutoresizingMaskIntoConstraints = false
        collectionController.view.backgroundColor = .orange
        collectionController.collectionView.accessibilityIdentifier = "availableFontsCollectionView"
        
        self.addChild(collectionController)
        collectionController.didMove(toParent: self)
        
        collectionController.delegate = self
        
...
